; ModuleID = '/home/carl/AnghaBench/openssl/apps/lib/extr_apps.c_dup_bio_in.c'
source_filename = "/home/carl/AnghaBench/openssl/apps/lib/extr_apps.c_dup_bio_in.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stdin = common dso_local global i32 0, align 4
@BIO_NOCLOSE = common dso_local global i32 0, align 4
@BIO_FP_TEXT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @dup_bio_in(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @stdin, align 4
  %4 = load i32, i32* @BIO_NOCLOSE, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call i64 @FMT_istext(i32 %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = load i32, i32* @BIO_FP_TEXT, align 4
  br label %11

10:                                               ; preds = %1
  br label %11

11:                                               ; preds = %10, %8
  %12 = phi i32 [ %9, %8 ], [ 0, %10 ]
  %13 = or i32 %4, %12
  %14 = call i32* @BIO_new_fp(i32 %3, i32 %13)
  ret i32* %14
}

declare dso_local i32* @BIO_new_fp(i32, i32) #1

declare dso_local i64 @FMT_istext(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
